Post-fork adjustments
- Change uses of "discordium" and "discord-link" to this project's name of "discordant".
- The README was updated to remove Discordium information and now describes the Discordant project.
- Issue templates were created for bug reports, feature requets, and refactoring requests.
- Root package name is now `com.kwvanderlinde.discordant`.
- Version has been reset to 0.0.1.
- Root configuration folder has been renamed to `discordant` and `discord-link.json` to the more neutral `config.json`.
- Basic code formatting has been manually applied to the whole project.
- JDA has been updated to the latest 5.0 alpha.